[package]
name = "dark-fluxus"
version = "0.0.0"
edition = "2024"
authors = ["dmyTRUEk"]

[profile.release]
opt-level = 3
#lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
num_enum = "0.7.6"
# encoding_rs = "0.8.35"
# llama-cpp-2 = "0.1.139"
# minifb = { version = "0.28.0", default-features = false, features = ["wayland"] }
rand = "0.10.0"
# rand_distr = "0.6.0"
sdl3 = { version = "0.17.3", features = [
	# "use-pkg-config"
	# "static-link"
	# "build-from-source-static"
	# "bundled"
] }
