[package]
name = "dark-fluxus"
version = "0.0.0"
edition = "2024"
authors = ["dmyTRUEk"]

[profile.release]
opt-level = 3
#lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
either = "1.15.0"
num_enum = "0.7.6"
#encoding_rs = "0.8.35"
#llama-cpp-2 = "0.1.139"
rand = "0.10.0"
bytemuck = "1.25.0"
glam = "0.32.1"
pollster = "0.4.0"
wgpu = "29.0.1"
winit = "0.30.13"
f128 = "0.2.9"
num-traits = "0.2.19"
